:rocket: Publish postgres ports

--- a/docker-compose-main.yml
+++ b/docker-compose-main.yml
@@ -11,6 +11,8 @@ services:
       POSTGRES_DB: wsaf
     env_file:
       - stack.env
+    ports:
+      - "44363:5432"
 
   wsaf24-website:
     container_name: WSAF24-Website-Main
