Use forwarded host header on deploy

--- a/docker-compose-main.yml
+++ b/docker-compose-main.yml
@@ -18,6 +18,7 @@ services:
       file: docker-compose.yml
       service: wsaf-management
     container_name: WSAF24-Management-Main
+      - USE_X_FORWARDED_HOST=True
 
 volumes:
   wsaf-postgres:
