--- a/docker-compose-main.yml
+++ b/docker-compose-main.yml
@@ -20,6 +20,7 @@ services:
     container_name: WSAF24-Management-Main
     environment:
       USE_X_FORWARDED_HOST: True
+      DEBUG: ${WSAF_MANAGEMENT_DEV_DEBUG}
 
 volumes:
   wsaf-postgres:
