--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -21,7 +21,7 @@ services:
     container_name: WSAF24-Management-Production
     image: ghcr.io/warwickstudentartsfestival/wsaf-management:production
     environment:
-      USE_X_FORWARDED_HOST: True
+      USE_X_FORWARDED_HOST: "True"
 
 volumes:
   wsaf-postgres:
