--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       HOSTNAME: 0.0.0.0
       NODE_ENV: production
       NEXT_PUBLIC_GOOGLE_ANALYTICS_ID: ${WSAF24_GOOGLE_ANALYTICS_ID}
-      DATABASE_URL: postgresql://wsaf:${POSTGRES_PASSWORD}@wsaf-postgres:5432/wsaf?schema=public"
+      DATABASE_URL: "postgresql://wsaf:${POSTGRES_PASSWORD}@wsaf-postgres:5432/wsaf?schema=public"
     env_file:
       - stack.env
 
