:config: Add global wsaf media volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,8 @@ services:
 volumes:
   wsaf-postgres:
   wsaf-management-media:
+    external:
+      name: wsaf-management-media
 
 networks:
   wsaf-network:
