--- a/docker-compose-main.yml
+++ b/docker-compose-main.yml
@@ -24,6 +24,9 @@ services:
 
 volumes:
   wsaf-postgres:
+  wsaf-management-media:
+    external:
+      name: wsaf-management-media
 
 networks:
   wsaf-network:
