--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -25,6 +25,9 @@ services:
 
 volumes:
   wsaf-postgres:
+  wsaf-management-media:
+    external:
+      name: wsaf-management-media
 
 networks:
   wsaf-network:
