--- a/stack.env
+++ b/stack.env
@@ -12,3 +12,6 @@ WSAF_MANAGEMENT_VIRTUAL_HOST=
 WSAF24_WEBSITE_BASE_URL=
 WSAF24_WEBSITE_VIRTUAL_HOST=
 WSAF24_GOOGLE_ANALYTICS_ID=
+
+# WSAF Assets
+WSAF_ASSETS_VIRTUAL_HOST=
