:config: Add wsaf assets container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,8 @@ services:
       - wsaf-network
     environment:
       VIRTUAL_HOST: ${WSAF24_ASSETS_VIRTUAL_HOST}
+    env_file:
+      - stack.env
 
 volumes:
   wsaf-postgres:
