--- a/stack.env
+++ b/stack.env
@@ -1,18 +1,18 @@
 # This is automatically populated by the values in portainer
 
-# Used by Postgres, WSAF-24 Website and WSAF Management
-POSTGRES_PASSWORD=
+# Used by Postgres, WSAF-25 Website and WSAF Management
+# POSTGRES_PASSWORD=
 
 # WSAF Management
-WSAF_MANAGEMENT_BASE_URL=
-WSAF_MANAGEMENT_SECRET_KEY=
-WSAF_MANAGEMENT_VIRTUAL_HOST=
+# WSAF_MANAGEMENT_BASE_URL=
+# WSAF_MANAGEMENT_SECRET_KEY=
+# WSAF_MANAGEMENT_VIRTUAL_HOST=
 
-# WSAF24 Website
-WSAF24_WEBSITE_BASE_URL=
-WSAF24_WEBSITE_VIRTUAL_HOST=
-WSAF24_GOOGLE_ANALYTICS_ID=
+# WSAF25 Website
+WSAF25_WEBSITE_BASE_URL=
+WSAF25_WEBSITE_VIRTUAL_HOST=
+WSAF25_GOOGLE_ANALYTICS_ID=
 
 # WSAF Assets
-WSAF_ASSETS_VIRTUAL_HOST=
-WSAF_ASSETS_BASE_URL=
+# WSAF_ASSETS_VIRTUAL_HOST=
+# WSAF_ASSETS_BASE_URL=
