--- a/stack.env
+++ b/stack.env
@@ -11,7 +11,7 @@
 # WSAF25 Website
 WSAF25_WEBSITE_BASE_URL=
 WSAF25_WEBSITE_VIRTUAL_HOST=
-WSAF25_GOOGLE_ANALYTICS_ID=
+WSAF25_GOOGLE_TAG=
 
 # WSAF Assets
 # WSAF_ASSETS_VIRTUAL_HOST=
