--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       HOSTNAME: 0.0.0.0
       NODE_ENV: production
       NEXT_PUBLIC_GOOGLE_ANALYTICS_ID: ${WSAF25_GOOGLE_ANALYTICS_ID}
+      NEXT_PUBLIC_DISCORD_WEBHOOK_URL: ${NEXT_PUBLIC_DISCORD_WEBHOOK_URL}
 #      DATABASE_URL: "postgresql://wsaf:${POSTGRES_PASSWORD}@wsaf-postgres:5432/wsaf?schema=public"
     env_file:
       - stack.env
