Auto restart container on power loss

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - wsaf-network
 #    depends_on:
 #      - wsaf-postgres
+    restart: unless-stopped
     environment:
       VIRTUAL_HOST: ${WSAF25_WEBSITE_VIRTUAL_HOST}
 
